<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="170dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/location_item"
        android:layout_width="383dp"
        android:layout_height="150dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="216dp"
                android:layout_height="26dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.93">

                <TextView
                    android:id="@+id/item_bedNr"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/gothamssm_book"
                    android:gravity="center"
                    android:text="@string/sample_bedNr"
                    android:textColor="@color/medium"
                    android:textSize="@dimen/very_small"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_bed" />

                <TextView
                    android:id="@+id/item_bathNr"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/gothamssm_book"
                    android:gravity="center"
                    android:text="@string/sample_bathNr"
                    android:textColor="@color/medium"
                    android:textSize="@dimen/very_small"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_bath" />

                <TextView
                    android:id="@+id/item_surfaceNr"
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/gothamssm_book"
                    android:gravity="center"
                    android:text="@string/sample_size"
                    android:textColor="@color/medium"
                    android:textSize="@dimen/very_small"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_layers" />

                <TextView
                    android:id="@+id/item_gpsNr"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gothamssm_book"
                    android:gravity="center"
                    android:text="@string/sample_gpsNr"
                    android:textColor="@color/medium"
                    android:textSize="@dimen/very_small"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_location" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/item_card"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginEnd="29dp"
                app:cardCornerRadius="@dimen/mediumSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/item_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/sample_Image"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="13dp" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="128dp"
                android:layout_height="23dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="84dp"
                android:fontFamily="@font/gothamssm_medium"
                android:text="@string/sample_price"
                android:textColor="@color/strong"
                android:textSize="@dimen/big"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_city"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:fontFamily="@font/gothamssm_medium"
                android:text="@string/sample_city"
                android:textColor="@color/medium"
                android:textSize="@dimen/medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/item_zip"
                app:layout_constraintTop_toBottomOf="@+id/item_price" />

            <TextView
                android:id="@+id/item_zip"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/gothamssm_medium"
                android:paddingEnd="4dp"
                android:text="@string/sample_zip"
                android:textColor="@color/medium"
                android:textSize="@dimen/medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_card"
                app:layout_constraintTop_toBottomOf="@+id/item_price"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="212dp" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top" />

            <ImageButton
                android:id="@+id/item_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.368"
                app:layout_constraintStart_toEndOf="@+id/item_price"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.006"
                app:srcCompat="@drawable/ic_whatshot_light" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="172dp" />


</androidx.constraintlayout.widget.ConstraintLayout>