<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/view_backBt"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_back"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_image"
        app:layout_constraintVertical_bias="0.243" />

    <ImageView
        android:id="@+id/view_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/location_image"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="630dp"
        android:background="@color/light_gray"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/view_price"
                android:layout_width="128dp"
                android:layout_height="23dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/gothamssm_black"
                android:text="@string/sample_price"
                android:textColor="@color/strong"
                android:textSize="@dimen/big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.106"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="128dp"
                android:layout_height="25dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/gothamssm_black"
                android:text="@string/viewDescriptionTitle"
                android:textColor="@color/strong"
                android:textSize="@dimen/big"
                app:layout_constraintBottom_toTopOf="@+id/view_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.106"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_price"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/view_description"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/gothamssm_book"
                android:text="@string/view_description_sample"
                android:textSize="@dimen/small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.535"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:layout_width="128dp"
                android:layout_height="25dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/gothamssm_black"
                android:text="@string/view_location_title"
                android:textColor="@color/strong"
                android:textSize="@dimen/big"
                app:layout_constraintBottom_toTopOf="@+id/map"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.106"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_description"
                app:layout_constraintVertical_bias="0.772" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="350dp"
                android:layout_height="220dp"
                android:layout_marginTop="352dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".ViewAndMapsActivity" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="216dp"
                android:layout_height="26dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/view_bedNr"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/gothamssm_book"
                    android:gravity="center"
                    android:text="@string/sample_bedNr"
                    android:textColor="@color/medium"
                    android:textSize="@dimen/very_small"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_bed" />

                <TextView
                    android:id="@+id/view_bathNr"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/gothamssm_book"
                    android:gravity="center"
                    android:text="@string/sample_bathNr"
                    android:textColor="@color/medium"
                    android:textSize="@dimen/very_small"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_bath" />

                <TextView
                    android:id="@+id/view_surfaceNr"
                    android:layout_width="44dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/gothamssm_book"
                    android:gravity="center"
                    android:text="@string/sample_surface"
                    android:textColor="@color/medium"
                    android:textSize="@dimen/very_small"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_layers" />

                <TextView
                    android:id="@+id/view_gpsNr"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gothamssm_book"
                    android:gravity="center"
                    android:text="@string/sample_gpsNr"
                    android:textColor="@color/medium"
                    android:textSize="@dimen/very_small"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_location" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="386dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="494dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="254dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="219dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="715dp" />

</androidx.constraintlayout.widget.ConstraintLayout>