<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/light_gray"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:id="@+id/about_linear_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:gravity="center_vertical|right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023">

        <TextView
            android:id="@+id/text_notifications"
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothamssm_book"
            android:text="@string/about_description"
            android:textSize="@dimen/small" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/gothamssm_black"
        android:text="@string/about_title"
        android:textColor="@color/strong"
        android:textSize="@dimen/big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_linear_description" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="149dp"
        android:layout_height="74dp"
        android:layout_marginStart="21dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/bannerv2_foreground_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/about_linkTxt"
        android:layout_width="69dp"
        android:layout_height="44dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:autoLink="web"
        android:text="@string/hyperlink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="381dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="295dp" />


</androidx.constraintlayout.widget.ConstraintLayout>